fix spacing on homepage

--- a/css/sass/_extra.scss
+++ b/css/sass/_extra.scss
@@ -14,7 +14,7 @@
 }
 
 .homepage-block {
-    margin: $base-line-height * 2 0;
+    padding: $base-line-height * 2 0;
     font-family: $base-font-paragraph;
     
     h1, h2, h3, h4, h5, h6 {
